--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="wvalueth=device-wvalueth, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="wvalueth=device-wvalueth, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
@@ -14,36 +17,140 @@
   <body>
     <div id="game">
       <div class="row">
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
       </div>
+
       <div class="row">
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
       </div>
+
       <div class="row">
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
       </div>
+
       <div class="row">
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-      </div> 
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+        <div class="scene scene_card">
+          <div class="card is-flipped">
+            <div class="card_face card_front"></div>
+            <div class="card_face card_back"></div>
+          </div>
+        </div>
+      </div>
     </div>
+
     <div id="restart">
-        <button id="restartBtn">Restart?</button>
+      <button id="restartBtn">Restart?</button>
     </div>
 
     <script src="script.js"></script>
