added back images and fixed some stuff

--- a/index.html
+++ b/index.html
@@ -15,142 +15,12 @@
     <title>Memory Game</title>
   </head>
   <body>
-    <div id="game">
-      <div class="row">
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-        <div class="scene scene_card">
-          <div class="card is-flipped">
-            <div class="card_face card_front"></div>
-            <div class="card_face card_back"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="restart">
-      <button id="restartBtn">Restart?</button>
+    <div id="start">
+      <span>Ready do start?</span>
+      <button id="startBtn">
+        <img src="Images/RocketMinder.png"/>
+        <a href="game.html"></a>
+      </button>
     </div>
 
     <script src="script.js"></script>
