fixed start btn and cards gap

--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
   <body>
     <div id="start">
       <div id="c1">
-        <img src="Images/transferir (1).svg"/>
+        <img src="Images/transferir (1).svg" />
       </div>
 
       <div id="c2">
         <span>Ready to start?</span>
-        <button id="startBtn">
-          <img src="Images/RocketMinder.png" />
-          <a href="game.html"></a>
-        </button>
+        <a href="game.html">
+          <button id="startBtn">
+            <img src="Images/RocketMinder.png" />
+          </button>
+        </a>
       </div>
 
       <div id="c3">
-        <img src="Images/transferir.svg"/>
+        <img src="Images/transferir.svg" />
       </div>
     </div>
 
