--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="wvalueth=device-wvalueth, initial-scale=1.0"
+      content="width=device-width, initial-scale=1.0" 
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
