did light/daark mode

--- a/game.html
+++ b/game.html
@@ -6,10 +6,25 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <title>Memory Game</title>
   </head>
   <body>
+    <button id="darkLight">
+      <lottie-player
+        id="lottie-animation"
+        src="https://lottie.host/df0f7fb0-6777-4128-b666-670d62889c9b/T0xdAh4mqb.json"
+        speed="1"
+        loop
+        autoplay
+        direction="1"
+        mode="normal"
+      ></lottie-player>
+    </button>    
     <div id="game"></div>
     <div id="restart">
       <button id="restartBtn">Restart?</button>
