fixed some file names and creaated and styled selectioon page

--- a/game.html
+++ b/game.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="wvalueth=device-wvalueth, initial-scale=1.0" />
+    <link rel="stylesheet" href="game.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
@@ -18,7 +18,7 @@
       <lottie-player
         id="lottie-animation"
         src="https://lottie.host/df0f7fb0-6777-4128-b666-670d62889c9b/T0xdAh4mqb.json"
-        speed="1"
+        speed="0.5"
         loop
         autoplay
         direction="1"
