--- a/selection.html
+++ b/selection.html
@@ -1,8 +1,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="wvalueth=device-wvalueth, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="selection.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
@@ -17,14 +17,15 @@
         <img src="Images/transferir (1).svg" />
       </div>
 
-      <div id="c2">
-        <span>Ready to start?</span>
+      <div id="difficultyCard">
+        <span>Difficulty</span>
         <a href="game.html">
-          <button id="startBtn">
-            <img src="Images/RocketMinder.png" />
-          </button>
+          <button id="Easy">Easy</button>
         </a>
+        <button id="Medium">Medium</button>
+          <button id="Hard">Hard</button>
       </div>
+      
 
       <div id="c3">
         <img src="Images/transferir.svg" />
