--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div id="c2">
         <span>Ready to start?</span>
-        <a href="game.html">
+        <a href="selection.html">
           <button id="startBtn">
             <img src="Images/RocketMinder.png" />
           </button>
