--- a/selection.html
+++ b/selection.html
@@ -22,10 +22,15 @@
         <a href="game.html">
           <button id="Easy">Easy</button>
         </a>
-        <button id="Medium">Medium</button>
+
+        <a href="game.html">
+          <button id="Medium">Medium</button>
+        </a>
+
+        <a href="game.html">
           <button id="Hard">Hard</button>
+        </a>
       </div>
-      
 
       <div id="c3">
         <img src="Images/transferir.svg" />
