--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
     </button>    
     <div id="game"></div>
     <div id="restart">
-      <button id="restartBtn">Restart?</button>
+      <button id="restartBtn">Restart</button>
     </div>
     <script src="script.js"></script>
   </body>
