--- a/game.html
+++ b/game.html
@@ -14,17 +14,21 @@
     <title>Memory Game</title>
   </head>
   <body>
+    <nav><a href="game.html">
+      <button id="homeBtn">Home</button>
+    </a>
     <button id="darkLight">
       <lottie-player
         id="lottie-animation"
         src="https://lottie.host/df0f7fb0-6777-4128-b666-670d62889c9b/T0xdAh4mqb.json"
-        speed="0.5"
+        speed=""
         loop
         autoplay
         direction="1"
         mode="normal"
       ></lottie-player>
-    </button>    
+    </button>  </nav>
+      
     <div id="game"></div>
     <div id="restart">
       <button id="restartBtn">Restart?</button>
