reverse on difficulty

--- a/selection.html
+++ b/selection.html
@@ -20,15 +20,15 @@
       <div id="difficultyCard">
         <span>Difficulty</span>
         <a href="game.html">
-          <button id="Easy">Easy</button>
+          <button id="easy">Easy</button>
         </a>
 
         <a href="game.html">
-          <button id="Medium">Medium</button>
+          <button id="medium">Medium</button>
         </a>
 
         <a href="game.html">
-          <button id="Hard">Hard</button>
+          <button id="hard">Hard</button>
         </a>
       </div>
 
