add points system

--- a/game.html
+++ b/game.html
@@ -24,7 +24,8 @@
         direction="1"
         mode="normal"
       ></lottie-player>
-    </button>    
+    </button>
+    <div id="points" style="color: white;">0</div>   
     <div id="game"></div>
     <div id="restart">
       <button id="restartBtn">Restart</button>
