did easy, medium, and hard modes, html, css, js

--- a/selection.html
+++ b/selection.html
@@ -19,15 +19,15 @@
 
       <div id="difficultyCard">
         <span>Difficulty</span>
-        <a href="game.html">
+        <a href="easy.html">
           <button id="Easy">Easy</button>
         </a>
 
-        <a href="game.html">
+        <a href="medium.html">
           <button id="Medium">Medium</button>
         </a>
 
-        <a href="game.html">
+        <a href="hard.html">
           <button id="Hard">Hard</button>
         </a>
       </div>
