--- a/hard.html
+++ b/hard.html
@@ -33,7 +33,7 @@
         ></lottie-player>
       </button>
     </nav>
-
+    <div id="points" style="color: white">0</div>
     <div id="game"></div>
     <div id="restart">
       <button id="restartBtn">Restart?</button>
