fixed light dark animation

--- a/easy.html
+++ b/easy.html
@@ -25,7 +25,7 @@
         <lottie-player
           id="lottie-animation"
           src="https://lottie.host/df0f7fb0-6777-4128-b666-670d62889c9b/T0xdAh4mqb.json"
-          speed=""
+          speed="0.5"
           loop
           autoplay
           direction="1"
@@ -38,6 +38,7 @@
     <div id="restart">
       <button id="restartBtn">Restart?</button>
     </div>
+
     <script src="easy.js"></script>
   </body>
 </html>
