--- a/hard.html
+++ b/hard.html
@@ -21,11 +21,12 @@
       <a href="selection.html">
         <button id="homeBtn">Home</button>
       </a>
+      <div id="points">0</div>
       <button id="darkLight">
         <lottie-player
           id="lottie-animation"
           src="https://lottie.host/df0f7fb0-6777-4128-b666-670d62889c9b/T0xdAh4mqb.json"
-          speed=""
+          speed="0.5"
           loop
           autoplay
           direction="1"
@@ -33,7 +34,6 @@
         ></lottie-player>
       </button>
     </nav>
-    <div id="points" style="color: white">0</div>
     <div id="game"></div>
     <div id="restart">
       <button id="restartBtn">Restart?</button>
