--- a/medium.html
+++ b/medium.html
@@ -25,7 +25,7 @@
         <lottie-player
           id="lottie-animation"
           src="https://lottie.host/df0f7fb0-6777-4128-b666-670d62889c9b/T0xdAh4mqb.json"
-          speed=""
+          speed="0.5"
           loop
           autoplay
           direction="1"
